jlamontSC-test/src/objects/Survey_Response__c.object
<CustomObject>
    <description>Catches an instance of someone filling out a survey form. 1 per survey form submission.</description>
    <fields>
        <fullName>Advocacy_Action_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if an advocacy action has been created for this contact and survey response. Used in process builder.</description>
        <label>Advocacy Action Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Contact matched to this instance of a Form Survey being filled out.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Responses Submitted</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Form_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Survey Form the Contact filled out.</description>
        <label>Form Campaign</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.CampaignMemberRecordTypeId</field>
                <operation>equals</operation>
                <value>01254000000ChIv</value>
            </filterItems>
            <infoMessage>Filtering for the Survey Form Campaigns</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Form_Name__c</fullName>
        <description>The name of the form passed in from FormAssembly, used to differentiate distinct forms from each other.</description>
        <label>Form Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Survey Responses (Source Campaign)</relationshipLabel>
        <relationshipName>Survey_Responses_Source_Campaign</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Completion_Time__c</fullName>
        <description>FormAssembly Value</description>
        <label>Survey Completion Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Response_IP__c</fullName>
        <description>&quot;IP Address used to submit the form&quot; - FormAssembly Documentation</description>
        <label>Survey Response IP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Response_Id__c</fullName>
        <label>Survey Response Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Response_URL__c</fullName>
        <description>&quot;The link to see the response on FormAssembly.com&quot; - FormAssembly Documentation</description>
        <label>Survey Response URL</label>
        <type>Url</type>
    </fields>
    <label>Survey Response</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Form_Name__c</columns>
        <columns>Survey_Response_IP__c</columns>
        <columns>Form_Campaign__c</columns>
        <columns>Source_Campaign__c</columns>
        <columns>Survey_Completion_Time__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Survey_Response_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SR-{000000000}</displayFormat>
        <label>Survey Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>